# netman

docs/technical_req/: interface_structure.md
sketch/: netman.sketch
src/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
src/src/: styles.css
src/src-backend/: NetworkAdapter.py  main.py  pyproject.toml
src/src-backend/src/: hosts.py
src/src-frontend/: angular.json  package-lock.json  package.json
src/src-frontend/src/: index.html  styles.css
src/src-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
src/src-frontend/src/app/components/menu/: menu.component.ts
src/src-frontend/src/app/components/net-connection-status/: net-connection-status.component.html  net-connection-status.component.ts
src/src-frontend/src/app/components/page-hosts/: page-hosts.component.html  page-hosts.component.ts
src/src-frontend/src/app/components/page-network-adapters-overview/: page-network-adapters-overview.component.html  page-network-adapters-overview.component.ts
src/src-frontend/src/app/schemas/: NetworkAdapter.ts  host.ts
src/src-frontend/src/app/services/: api.ts
src/src-tauri/: tauri.conf.json
src/src/app/: app.component.spec.ts  app.component.ts
thunder-tests/: thunderActivity.json
