[tool.poetry]
name = "netman"
version = "0.1.0"
description = ""
authors = ["Konstantin-Dudersky <Konstantin.Dudersky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.77.1"
uvicorn = "0.17.6"
wmi = "1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
